objects/ReplaceablePartNumberMatrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Asset_PN__c</fullName>
        <label>Asset PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_LR__c</fullName>
        <label>Fiber LR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiber_SR__c</fullName>
        <label>Fiber SR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDD_PN__c</fullName>
        <label>HDD PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVME_PN__c</fullName>
        <label>NVME PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_PN__c</fullName>
        <label>PS PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PN__c</fullName>
        <label>Product PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFP_LR__c</fullName>
        <label>SFP LR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFP_SR__c</fullName>
        <label>SFP SR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSD_PN__c</fullName>
        <label>SSD PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Replaceable Part Number Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_PN__c</columns>
        <columns>Asset_PN__c</columns>
        <columns>HDD_PN__c</columns>
        <columns>SSD_PN__c</columns>
        <columns>PS_PN__c</columns>
        <columns>NVME_PN__c</columns>
        <columns>Fiber_LR__c</columns>
        <columns>Fiber_SR__c</columns>
        <columns>SFP_LR__c</columns>
        <columns>SFP_SR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>